# ledger

./: .commitlintrc.js  .commitlintrc.mjs  .editorconfig  .gitattributes  .gitignore  .lintstagedrc.mjs  .markdownlint-cli2.js  .markdownlint-cli2.mjs  .prettierrc.mjs  AGENTS.md  accounts.journal  current.journal  index.journal  migrate.py  package.json  pnpm-lock.yaml  prelude.journal  private.yaml.gpg  pyproject.toml  pyrightconfig.json  replace.txt  requirements.txt
.agents/instructions/: account-hierarchy.instructions.md  agent-glossary.instructions.md  agent-quickstart.instructions.md  alternatives-journal.instructions.md  architecture.instructions.md  common-workflows.instructions.md  continuous-learning.instructions.md  dependencies.instructions.md  developer-workflows.instructions.md  editing-guidelines.instructions.md  git-commits.instructions.md  python-entry-points.instructions.md  security.instructions.md  transaction-format.instructions.md
.agents/prompts/: commit-staged-ledger-transactions.prompt.md  commit-staged.prompt.md
.github/: dependabot.yml
.github/instructions/: .markdownlint.jsonc  account-hierarchy.instructions.md  agent-glossary.instructions.md  agent-quickstart.instructions.md  alternatives-journal.instructions.md  architecture.instructions.md  common-workflows.instructions.md  dependencies.instructions.md  developer-workflows.instructions.md  editing-guidelines.instructions.md  git-commits.instructions.md  security.instructions.md  transaction-format.instructions.md
.github/prompts/: commit-staged-change.prompt.md  commit-staged-ledger-transaction-changes.prompt.md  commit-staged-ledger-transactions.prompt.md
.github/workflows/: check.yml  ci.yml  commitlint.yml  format-check.yml  markdownlint.yml
.husky/: commit-msg  pre-commit  pre-push
ledger/: index.journal  self.alternatives.journal  self.journal
ledger/2018/: self.journal
ledger/2019/: self.journal
ledger/2020/: self.journal
ledger/2021/: self.journal
ledger/2022/: self.alternatives.journal  self.journal
ledger/2023/: self.alternatives.journal  self.journal
preludes/: index.journal  self.alternatives.journal  self.journal
scripts/: __init__.py  check.bat  check.py  check.sh  clopen  clopen.bat  clopen.py  clopen.sh  decrypt.bat  decrypt.sh  depreciate  depreciate.bat  depreciate.py  depreciate.sh  encrypt.bat  encrypt.sh  format-md  format-md.bat  format-md.sh  format.bat  format.py  format.sh  replace.bat  replace.py  replace.sh  shift  shift.bat  shift.py  shift.sh  util.py
self/: index.journal  prelude.journal  process.py
self.alternatives/: index.journal  prelude.journal  replace.txt
tests/: conftest.py  test_docstrings.py  test_module_exports.py  utils.py
(+393 files in other folders)
