[build-system]
requires = ["setuptools>=81.0.0", "wheel>=0.46.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger-1d6d85b9-feff-49da-b257-90ad7359400a"
version = "0.0.0"
requires-python = ">=3.12.0"
description = "Personal ledger tooling"
dependencies = [
  "anyio>=4.12.0",
  "pydantic>=2.12.0",
]

[dependency-groups]
dev = [
  "black>=26.1.0",
  "hypothesis>=6.151.0",
  "isort>=7.0.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ["--cov=./", "--cov-report=term-missing", "--dist=loadscope", "-n=auto", "--strict-markers"]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88

[tool.setuptools]
packages = []
