[build-system]
requires = ["setuptools>=81.0.0", "wheel>=0.46.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger-1d6d85b9-feff-49da-b257-90ad7359400a"
version = "0.0.0"
requires-python = ">=3.12.0"
description = "Personal ledger tooling"
dependencies = [
  "anyio>=4.12.0",
  "pydantic>=2.12.0",
]

[dependency-groups]
dev = [
  "hypothesis>=6.151.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.0",
]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", ".venv"]
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."

[[tool.pyright.executionEnvironments]]
extraPaths = ["."]
reportPrivateUsage = "none"
root = "tests"

[[tool.pyright.executionEnvironments]]
root = "."

[tool.pytest.ini_options]
addopts = ["--cov=./", "--cov-report=term-missing", "--dist=loadscope", "-n=auto", "--strict-markers"]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable Pylint-derived rule that disallows imports outside module top-level
# (import-outside-top-level / PLC0415). Ruff 0.12.0+ provides this rule.
extend-select = ["I", "PLC0415"]

[tool.setuptools]
packages = []
